2022-09-15T16:30:42Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3062112906
* notice: last 14d: unq all: 4 21
* notice: prev accum: outdated-unq outdated-all / unq all: 22 121 / 39 149
* notice: next accum: outdated-unq outdated-all / unq all: 22 121 / 35 142
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -4 -8 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-01 2022-09-15]

2022-09-15T08:30:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3058940167
* notice: last 14d: unq all: 7 28
* notice: prev accum: outdated-unq outdated-all / unq all: 22 121 / 38 148
* notice: next accum: outdated-unq outdated-all / unq all: 22 121 / 39 149
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-15]

2022-09-15T02:26:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057379641
* notice: last 14d: unq all: 7 27
* notice: prev accum: outdated-unq outdated-all / unq all: 14 107 / 31 135
* notice: next accum: outdated-unq outdated-all / unq all: 22 121 / 38 148
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-08-31] / [2022-09-01 2022-09-14]

2022-09-14T16:30:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3054469188
* notice: last 14d: unq all: 8 28
* notice: prev accum: outdated-unq outdated-all / unq all: 14 107 / 31 135
* notice: next accum: outdated-unq outdated-all / unq all: 14 107 / 31 135
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-08-31 2022-09-14]

2022-09-14T08:27:44Z: