@@ -1,15 +1,10 @@
 {
-  "count": 21,
-  "uniques": 4,
+  "count": 18,
+  "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-09-01T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-09-02T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
