@@ -1,3 +1,11 @@
+2022-09-16T02:27:57Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3065010888
+* notice: last 14d: unq all: 2 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 22 121 / 35 142
+* notice: next accum: outdated-unq outdated-all / unq all: 28 132 / 39 150
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [2022-09-01] / [2022-09-02]
+
 2022-09-15T16:30:42Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3062112906
 * notice: last 14d: unq all: 4 21
